--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ main {
 }
 
 section {
-  margin-bottom: 3em;
+  margin-bottom: 5em;
+  margin-bottom: 5em;
 }
 
 .title-section {
@@ -70,7 +71,7 @@ h2 {
 
 /* About */
 
-.about p {
+.paragraph {
   width: 60%;
   line-height: 1.4;
   margin: auto;
@@ -89,7 +90,7 @@ h2 {
   box-shadow: 3px 3px 10px #bebebe, -10px -10px 20px #ffffff;
   height: 150px;
   width: 60%;
-  margin: 0 auto 1em;
+  margin: 0 auto 1.5em;
   padding: 10px 5px;
   display: grid;
   grid-template-columns: 30% 1fr;
@@ -123,6 +124,20 @@ h2 {
 .info-service p {
   margin-top: 10px;
   line-height: 1.4;
+  padding-bottom: 1em;
+}
+
+.info-service .arrow {
+  display: none;
+  border-radius: 50%;
+  background-color: #001a49;
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
+.arrow img {
+  width: 100%;
 }
 
 /* Prices */
@@ -183,6 +198,87 @@ h2 {
   font-size: 1.2em;
 }
 
+/* QUESTIONS */
+
+.questions {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 5em;
+}
+
+.questions__padding {
+  padding: 0;
+  transition: padding 0.3s;
+  border: 1px solid #5454d4;
+  border-radius: 6px;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.questions__padding--add {
+  padding-bottom: 30px;
+}
+
+.questions__answer {
+  padding: 0 30px 0;
+  overflow: hidden;
+}
+
+.questions__title {
+  text-align: left;
+  display: flex;
+  font-size: 20px;
+  padding: 30px 0 30px;
+  cursor: pointer;
+  color: var(--color-title);
+  justify-content: space-between;
+}
+
+.questions__arrow {
+  border-radius: 50%;
+  background-color: var(--color-title);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-left: 10px;
+  transition: transform 0.3s;
+}
+
+.questions__arrow--rotate {
+  transform: rotate(180deg);
+}
+
+.questions__show {
+  text-align: left;
+  height: 0;
+  transition: height 0.3s;
+}
+
+.questions__img {
+  display: block;
+}
+
+.questions__copy {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+/* INVITATION */
+
+.redirect-message {
+  box-shadow: 0px 0px 4px #001a49;
+  border-radius: 10px;
+  padding: 2px 5px;
+}
+
+.redirect-message a {
+  text-decoration: none;
+}
+
 /* FOOTER */
 
 footer {
@@ -191,4 +287,5 @@ footer {
   background-color: #001a49;
   width: 100%;
   height: 100px;
+  margin-top: 7em;
 }
