--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,19 @@ footer {
   bottom: 0;
   background-color: #001a49;
   width: 100%;
-  height: 100px;
+  height: fit-content;
   margin-top: 7em;
+  color: white;
+}
+
+.list-footer {
+  display: grid;
+  grid-auto-flow: column;
+  list-style: none;
+  width: fit-content;
+  margin: auto;
+  gap: 1.5em;
+}
+
+.list-item {
 }
